# batch_podcast

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  README.md  STATUS.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: quality.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: development.yaml  development.yaml.template  newsletters.yaml  newsletters.yaml.template  production.yaml
docker/: Dockerfile
docs/: QUICK_START.md  USER_STORY_1_COMPLETION.md
scripts/: migrate_add_cost_tracking.py  migrate_add_newsletter_profiles.py  seed_sample_episodes.py
specs/001-newsletter-podcast-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-newsletter-podcast-generator/checklists/: requirements.md
specs/001-newsletter-podcast-generator/contracts/: api.yaml  cli.md
src/: __init__.py  __main__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  newsletters.py
src/cli/: __init__.py  commands.py  cost_commands.py
src/lib/: cost_tracker.py  newsletter_config.py  storage.py  utils.py
src/models/: __init__.py  episode.py  newsletter.py
src/services/: __init__.py  content_extractor.py  llm_summarizer.py  newsletter_processor.py  tts_generator.py
src/ui/: __init__.py  app.py
tests/: __init__.py
tests/accessibility/: test_accessibility.py
tests/contract/: test_newsletter_api.py
tests/integration/: test_newsletter_processing.py
tests/unit/: test_content_extractor.py  test_llm_summarizer.py  test_tts_generator.py
